Clean up code to fit my style preferences